# rust-rocket-crud

./: Cargo.toml
src/: lib.rs  main.rs
src/catcher/: http.rs
src/config/: mongo.rs
src/controller/: mod.rs  movie_controller.rs  survey_controller.rs
src/entity/: mod.rs  movie_entity.rs  survey_entity.rs
src/exception/: error.rs
src/helper/: response.rs  validation.rs
src/models/: common_model.rs  mod.rs  movie_model.rs  survey_model.rs
src/repository/: mod.rs  movie_repository.rs  survey_repository.rs
src/service/: mod.rs  movie_service.rs  survey_service.rs
