[package]
name = "rust-crud-mongo"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
mongodb = "2.1"
bson = { version = "2", features = [
    "chrono-0_4",
] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
dotenv = "0.15.0"
serde_json = "1.0.133"
